--- a/src/core/terminal/BUILD
+++ b/src/core/terminal/BUILD
@@ -1,12 +1,14 @@
 cc_library(
     name = "terminal",
-    deps = [],
     srcs = [
         ":color.cpp",
+        ":raw.cpp",
     ],
     hdrs = [
         ":terminal.hpp",
         ":color.hpp",
+        ":raw.hpp",
+        ":event.hpp",
     ],
     visibility = ["//visibility:public"],
 )
